# HW4-PRIM-MST

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
mst/: graph.py
test/: test_mst.py
