[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >='3.9'"
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "mst"
authors = [ {name = "Sara Smith", email = "sara.smith@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", "numpy", "scikit-learn", "heapq"
]

[project.urls]
Home = "https://github.com/2sarajade/HW4-PRIM-MST.git"